[1단계 - HTTP 서버 구현하기] 한스(이현수) 미션 제출합니다. (#794)
* feat: resource path에 맞게 리소스 서빙하는 코드 작성

* chore: 패키지 구조 변경

* refactor: 객체로 분리할수 있는것들 분리

* chore: 빠진 파일 추가

* refactor: ContentType 표준에 맞게 수정

* refactor: HttpVersion 불필요해 보여서 삭제

* refactor: RequestLine 로버스트하게 로직 변경

* refactor: lineSeparator설정할 수 있도록 변경

* refactor: request에서 requestline을 추출하는 메서드 예외처리 추가

* refactor: request파싱 로직 보완

* refactor: response를 utf8로 응답

* refactor: response \r\n규칙 지키도록 로직 수정

* refactor: 파일 읽는 로직 리팩터링

* refactor: httpRequest 무한루프 해결

* fix: index.html 파일이 짤리는 현상 해결.

---------

Co-authored-by: HyeonsuLee <leehyeonsu4888@naver.com>